# korean-social-simulation

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
deploy/: .dockerignore  Dockerfile  README.md  fly.toml
scenarios/: example_ramen_ad.yaml
scripts/: _image_backend.py  generate_avatars.py  generate_illustrations.py
src/korean_social_simulation/: __init__.py  _version.py  cli.py  dashboard.py  reaction.py  run.py  scenario.py  simulate.py
tests/: conftest.py  test_cli.py  test_dashboard_smoke.py  test_e2e.py  test_reaction.py  test_run.py  test_run_partial.py  test_scenario.py  test_simulate.py  test_simulate_progress_sink.py
tests/api/: conftest.py  test_auth.py  test_avatar.py  test_client_ip.py  test_health.py  test_job_manager.py  test_revalidate.py  test_runs_create_and_stream.py  test_runs_crud.py  test_scenarios.py  test_try.py
tests/data/: test_loader.py  test_sampler.py
tests/llm/: test_codex_oauth_compat.py  test_factory.py  test_prompts.py
tests/report/: test_charts.py  test_insights.py  test_markdown.py
tests/scripts/: test_generate_avatars.py  test_generate_illustrations.py
web/: .env.example  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/__tests__/: api.test.ts  live-feed.test.tsx  persona-card.test.tsx  scenario-form.test.tsx  sse-reconnect.test.tsx
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: hero-image.tsx  run-tabs.tsx  site-nav.tsx
web/lib/: api.ts  avatar.ts  featured.ts  format.ts  sse.ts  types.ts
(+53 files in other folders)
