[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-social-simulation"
version = "0.0.1"
description = "다양한 한국 페르소나를 기반으로 특정 현상에 대한 시뮬레이션"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "pandas>=3.0",
    "pydantic>=2.13",
    "pyarrow>=24",
    "hf_transfer>=0.1.9",
    "langchain-core>=1.3",
    "langchain-openai>=1.2",
    "matplotlib>=3.10",
    "typer>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.57"]

[project.scripts]
kss = "korean_social_simulation.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["korean_social_simulation*"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 200
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
